--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:once": "react-scripts test --watchAll=false",
+    "eject": "react-scripts eject",
+    "lint:styles": "stylelint src/**/*.scss",
+    "lint:ts": "tsc --noEmit && eslint 'src/**/*.ts{,x}' --quiet --fix",
+    "lint": "run-p lint:styles lint:ts"
   },
   "eslintConfig": {
     "extends": "react-app"
